--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             background-size: cover;
             background-position: center;
             color: #fff;
+            width: 20%;
         }
 
         .white-block {
@@ -79,6 +80,7 @@
 
         .section-content {
             padding: 20px;
+            width: 23%;
         }
 
         footer {
