--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             padding: 20px;
             margin: 10px;
             width: 23%;
+            background-color: #f7f7f7;
+            color: black;
         }
 
         footer {
