--- a/index.html
+++ b/index.html
@@ -55,15 +55,22 @@
             text-decoration: none;
         }
 
-        .section-box {
+        .content-box {
             padding: 20px;
             margin-bottom: 30px;
-            border-radius: 5px;
+            border-radius: 10px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            background-size: cover;
-            background-position: center;
-            color: #fff;
-            width: 20%;
+            color: black;
+            background-color: #f7f7f7;
+            width: 23%;
+        }
+
+        .image-container {
+            margin: 0 auto;
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+            max-height: 18vh;
         }
 
         .white-block {
@@ -76,14 +83,6 @@
             background-color: #fff;
             height: 2px;
             margin-bottom: 20px;
-        }
-
-        .section-content {
-            padding: 20px;
-            margin: 10px;
-            width: 23%;
-            background-color: #f7f7f7;
-            color: black;
         }
 
         footer {
