--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
         section {
             padding: 20px;
             margin-bottom: 30px;
+            margin-left: 12px;
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            width: 28%;
         }
 
         section h2 {
