--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </section>
     <section id="services">
         <h2>Our Services</h2>
-        <ul>
+        <ul style="margin-left: 7px;">
             <li>Couple Counseling</li>
             <li>Individual Therapy</li>
             <li>Family Counseling</li>
