--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         section {
             padding: 20px;
-            margin-bottom: 30px;
+            margin: 30px;
             margin-left: 12px;
             background-color: #fff;
             border-radius: 5px;
