--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
             width: 28%;
         }
 
+        section-contact {
+            padding: 20px;
+            margin: auto;
+            background-color: #fff;
+            border-radius: 7px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            width: 82%;
+        }
+
         section h2 {
             color: #007bff;
             margin-bottom: 10px;
