--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             width: 28%;
         }
 
-        section-contact {
+        .section-contact {
             padding: 20px;
             margin: auto;
             background-color: #fff;
