--- a/index.html
+++ b/index.html
@@ -64,12 +64,8 @@
         }
 
         .section-contact {
-            padding: 20px;
-            margin: auto;
-            background-color: #fff;
-            border-radius: 7px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            width: 82%;
+            margin: auto !important;
+            width: 82% !important;
         }
 
         section h2 {
