--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             width: 28%;
         }
 
-        .section-contact {
+        .contact {
             margin: auto !important;
             width: 82% !important;
         }
