--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <li>Group Therapy</li>
         </ul>
     </section>
-    <section id="contact">
+    <section id="contact" class="contact">
         <h2>Contact Us</h2>
         <p>Feel free to reach out to us for appointments or inquiries.</p>
         <address>
