--- a/index.html
+++ b/index.html
@@ -55,17 +55,10 @@
 
         section {
             padding: 20px;
-            margin: 100px;
-            margin-left: 12px;
+            margin: 30px;
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            width: 28%;
-        }
-
-        .contact {
-            margin: auto !important;
-            width: 82% !important;
         }
 
         section h2 {
@@ -120,7 +113,7 @@
             <li>Group Therapy</li>
         </ul>
     </section>
-    <section id="contact" class="contact">
+    <section id="contact">
         <h2>Contact Us</h2>
         <p>Feel free to reach out to us for appointments or inquiries.</p>
         <address>
