--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+            margin-top: 150px;
         }
 
         footer p {
