--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             background-color: #f4f4f4;
             color: #333;
             line-height: 1.6;
+            height: 115%;
         }
 
         header {
@@ -78,7 +79,6 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            margin-top: 150px;
         }
 
         footer p {
